--- a/ToDo/Web.config
+++ b/ToDo/Web.config
@@ -30,6 +30,9 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <customErrors mode="On" defaultRedirect="~/ErrorHandler/Index.cshtml">
+      <error statusCode="404" redirect="~/ErrorHandler/NotFound"/>
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
